@@ -1,3 +1,12 @@
+2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tap/awk: support Solaris /usr/bin/nawk
+	* lib/tap-driver.sh (close_or_die): Remove, the use of the `close'
+	builtin in there was confusing /usr/bin/nawk from Solaris 10 into
+	a syntax error.
+	(write_test_results): Simply use `close' on the `*.trs' file, that
+	should be enough.
+
 2011-08-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tap/awk: correctly extract message from SKIP plans
